force-app/main/default/objects/Bird_Eye_Settings__mdt/Bird_Eye_Settings__mdt.object-meta.xml
<CustomObject>
    <label>Bird Eye Settings</label>
    <pluralLabel>Bird Eye Settings</pluralLabel>
</CustomObject>