force-app/main/default/objects/Bird_Eye_Settings__mdt/fields/Business_Id__c.field-meta.xml
<CustomField>
    <fullName>Business_Id__c</fullName>
    <label>Business Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>