force-app/main/default/objects/Bird_Eye_Settings__mdt/fields/Customer_Check_In_Base_Url__c.field-meta.xml
<CustomField>
    <fullName>Customer_Check_In_Base_Url__c</fullName>
    <label>Customer Check In Base Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>