force-app/main/default/objects/Bird_Eye_Settings__mdt/fields/ELFI_Location_Id__c.field-meta.xml
<CustomField>
    <fullName>ELFI_Location_Id__c</fullName>
    <label>ELFI Location Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>