force-app/main/default/objects/Bird_Eye_Settings__mdt/fields/Rhino_Location_Id__c.field-meta.xml
<CustomField>
    <fullName>Rhino_Location_Id__c</fullName>
    <label>Rhino Location Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>